--- a/config/database.yml
+++ b/config/database.yml
@@ -47,8 +47,8 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
-# production:
-#   <<: *default
-#   database: sample_app_production
-#   username: sample_app
-#   password: <%= ENV['SAMPLE_APP_DATABASE_PASSWORD'] %>
+production:
+  <<: *default
+  database: sample_app_production
+  username: sample_app
+  password: <%= ENV['SAMPLE_APP_DATABASE_PASSWORD'] %>
